--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </ul>
         </div>
         <div class="image">
-            <img src="images/Profilepic.jpeg" alt="Venkata Sai Telanakula" />
+            <img src="images/Profilepic.jpeg" alt="Mr. Venkata Sai Telanakula" />
         </div>
     </section>
 
