--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Hero Section -->
     <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content">
-            <h1>Venkata Sai Telanakula</h1>
+            <h1>Mr. Venkata Sai Telanakula</h1>
             <p class="major">SAP Technical Consultant | Systems Analyst | IT Operations Support</p>
          <ul class="actions stacked">
   <li style="display: flex; align-items: left; gap: 30px; justify-content: left;">
@@ -31,7 +31,7 @@
 </ul>
         </div>
         <div class="image">
-            <img src="images/Profilepic.jpeg" alt="Mr. Venkata Sai Telanakula" />
+            <img src="images/Profilepic.jpeg" alt="Venkata Sai Telanakula" />
         </div>
     </section>
 
