--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <link rel="stylesheet" href="assets/css/main.css" />
     <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+    <style>
+  body {
+    background-color: #000 !important;
+    color: #fff !important;
+  }
+  section, .wrapper, .content {
+    background-color: #000 !important;
+    color: #fff !important;
+  }
+  h1, h2, h3, p, a, li {
+    color: #fff !important;
+  }
+
+ a.button {
+  background-color: #bffff6 !important; /* Lighter radium tone */
+  color: #000 !important;
+  border: none;
+  box-shadow: 0 0 5px #bffff6, 0 0 10px #bffff6;
+  transition: all 0.3s ease-in-out;
+}
+
+a.button:hover {
+  box-shadow: 0 0 10px #bffff6, 0 0 20px #bffff6;
+  transform: scale(1.05);
+}
+
+
+</style>
 </head>
 <body class="is-preload">
 
@@ -161,6 +189,16 @@
 
     </div>
   </div>
+  <style>
+  section.wrapper.style1.align-center .inner > div > div {
+    color: #000 !important;
+  }
+  section.wrapper.style1.align-center .inner > div > div h3,
+  section.wrapper.style1.align-center .inner > div > div p,
+  section.wrapper.style1.align-center .inner > div > div a {
+    color: #000 !important;
+  }
+</style>
 </section>
 
 
@@ -175,12 +213,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="wrapper style1 align-center">
-        <div class="inner">
-            <p>&copy; 2025 Venkata Sai Telanakula. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-        </div>
-    </footer>
+   
 
 </div>
 
