--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ a.button:hover {
     <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="about" data-aos="fade-right" data-aos-duration="1000">
         <div class="content">
             <h2>About Me</h2>
-            <p>I’m an IT professional with 4+ years of experience in SAP, IT operations support, and enterprise systems. I’ve specialized in delivering secure, scalable solutions in HR and payroll processes, streamlining data principles, and building insights-driven applications across cross-functional teams.</p>
+            <p>I’m an IT professional with 4+ years of experience in SAP, IT operations support,Administrative assistant, and enterprise systems. I’ve specialized in delivering secure, scalable solutions in HR and payroll processes, streamlining data principles, and building insights-driven applications across cross-functional teams.</p>
         </div>
         <div class="image">
             <img src="images/TechSupportRep copy.avif" alt="About" />
