--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ a.button:hover {
     <!-- Hero Section -->
     <section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
         <div class="content">
-            <h1>Mr. Venkata Sai Telanakula</h1>
+            <h1>Venkata Sai Telanakula</h1>
             <p class="major">SAP Technical Consultant | Systems Analyst | IT Operations Support</p>
          <ul class="actions stacked">
   <li style="display: flex; align-items: left; gap: 30px; justify-content: left;">
@@ -67,7 +67,7 @@ a.button:hover {
     <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="about" data-aos="fade-right" data-aos-duration="1000">
         <div class="content">
             <h2>About Me</h2>
-            <p>I’m an IT professional with 4+ years of experience in SAP, IT operations support, Administrative assistant, and Enterprise systems. I’ve specialized in delivering secure, scalable solutions in HR and payroll processes, streamlining data principles, and building insights-driven applications across cross-functional teams.</p>
+            <p>I’m an IT professional with 4+ years of experience in SAP, IT operations support, Administrative assistant, and nterprise systems. I’ve specialized in delivering secure, scalable solutions in HR and payroll processes, streamlining data principles, and building insights-driven applications across cross-functional teams.</p>
         </div>
         <div class="image">
             <img src="images/TechSupportRep copy.avif" alt="About" />
@@ -75,48 +75,48 @@ a.button:hover {
     </section>
 
     <!-- Skills -->
-    <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" data-aos="fade-up" data-aos-duration="1000">
-        <div class="content">
-            <h2>Skills</h2>
-            <ul>
-                <li><strong>Languages:</strong> Python, SQL, SAP ABAP, HTML, CSS</li>
-                <li><strong>Systems:</strong> SAP-HR, SuccessFactors, ECC, GRC, Linux</li>
-                <li><strong>Tools:</strong> Power BI, Tableau, Jira, Salesforce, ServiceNow, Zendesk, Trello, Citrix</li>
-            </ul>
-        </div>
-        <div class="image">
-            <img src="images/servicenow-vs-zendes.png" alt="Skills" />
-        </div>
-    </section>
+   <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" data-aos="fade-up" data-aos-duration="1000">
+  <div class="content">
+    <h2>Skills</h2>
+    <ul>
+      <li><strong style="color: #fff;">Languages:</strong> Python, SQL, SAP ABAP, HTML, CSS</li>
+      <li><strong style="color: #fff;">Systems:</strong> SAP-HR, SuccessFactors, ECC, GRC, Linux</li>
+      <li><strong style="color: #fff;">Tools:</strong> Power BI, Tableau, Jira, Salesforce, ServiceNow, Zendesk, Trello, Citrix</li>
+    </ul>
+  </div>
+  <div class="image">
+    <img src="images/servicenow-vs-zendes.png" alt="Skills" />
+  </div>
+</section>
 
     <!-- Experience Part 1 -->
 <section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" data-aos="fade-up" data-aos-duration="1000">
   <div class="content">
     <h2>Professional Experience</h2>
 
-    <p><strong>Saint Louis University</strong> – Student Worker, Office of the Registrar (2024–2025)</p>
+    <p><strong style="color: #fff;">Saint Louis University</strong> – Student Worker, Office of the Registrar (2024–2025)</p>
     <ul>
       <li>Assisted in managing student records and data integrity for over 1500 students.</li>
-	  <li>Developed automated scripts to streamline data entry processes, reducing errors by 30%.</li>
-	  <li>Collaborated with IT teams to enhance the student information system (SIS) functionality.</li>
+      <li>Developed automated scripts to streamline data entry processes, reducing errors by 30%.</li>
+      <li>Collaborated with IT teams to enhance the student information system (SIS) functionality.</li>
     </ul>
 
-    <p><strong>Excelerate</strong> – Data Analytics & Strategy Intern (2023–2024)</p>
+    <p><strong style="color: #fff;">Excelerate</strong> – Data Analytics & Strategy Intern (2023–2024)</p>
     <ul>
       <li>Designed and deployed dashboards in Tableau and Power BI for visualizing learning outcomes.</li>
       <li>Analyzed user engagement data across 3 major campaigns, increasing reach by 25%.</li>
       <li>Automated weekly reporting with SQL and Excel macros, cutting manual effort by 40%.</li>
     </ul>
   </div>
-   <div class="image">
-            <img src="images/Expppp.jpeg" alt="Professional Experience" />
-        </div>
+  <div class="image">
+    <img src="images/Expppp.jpeg" alt="Professional Experience" />
+  </div>
 </section>
 
 <!-- Experience Part 2 -->
 <section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" data-aos="fade-up" data-aos-duration="1000">
   <div class="content">
-    <p><strong>Cognizant Technology Solutions</strong> – SAP Technical Consultant (2020–2023)</p>
+    <p><strong style="color: #fff;">Cognizant Technology Solutions</strong> – SAP Technical Consultant (2020–2023)</p>
     <ul>
       <li>Primary technical contact for SAP-HR systems: access, payroll, and security escalations.</li>
       <li>Automated role provisioning using LSMW and SU10, reducing manual workload by 40%.</li>
@@ -124,7 +124,7 @@ a.button:hover {
       <li>Collaborated with analytics teams to deliver HR insights from backend SAP data.</li>
     </ul>
 
-    <p><strong>Merck KGaA, Germany</strong> – SAP HR-Payroll Support Engineer</p>
+    <p><strong style="color: #fff;">Merck KGaA, Germany</strong> – SAP HR-Payroll Support Engineer</p>
     <ul>
       <li>Provided Tier-2 support for global HR-payroll processes in SAP.</li>
       <li>Reduced SLA breaches by 25% by implementing proactive monitoring via Integrtr.</li>
@@ -132,8 +132,8 @@ a.button:hover {
     </ul>
   </div>
   <div class="image">
-            <img src="images/infoguard-cyber-security-blog-sap-security.jpg" alt="Professional Experience" />
-        </div>
+    <img src="images/infoguard-cyber-security-blog-sap-security.jpg" alt="Professional Experience" />
+  </div>
 </section>
 
 
